--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="no-js">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-/>
-    <title>WS Official</title>
+    <title>Awesome Mirror Effect | Codrops</title>
+    <meta name="description" content="" />
+    <meta name="keywords" content="" />
+    <meta name="author" content="Codrops" />
+    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="css/App.css" />
+    <script>
+      document.documentElement.className = 'js'
+      var supportsCssVars = function () {
+        var e,
+          t = document.createElement('style')
+        return (
+          (t.innerHTML = 'root: { --tmp-var: bold; }'),
+          document.head.appendChild(t),
+          (e = !!(window.CSS && window.CSS.supports && window.CSS.supports('font-weight', 'var(--tmp-var)'))),
+          t.parentNode.removeChild(t),
+          e
+        )
+      }
+      supportsCssVars() || alert('Please view this demo in a modern browser that supports CSS Variables.')
+    </script>
+    <!--script src="//tympanus.net/codrops/adpacks/analytics.js"></script-->
   </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+  <body class="demo-1">
     <div id="root"></div>
+    <!--script src="https://tympanus.net/codrops/adpacks/cda.js"></script-->
   </body>
 </html>
